[package]
name = "esp32c6-base"
version = "0.1.0"
authors = ["Carl Hurd <carl@basilisklabs.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32c6-hal = { path = "../esp-hal/esp32c6-hal", version = "0.7.0", features = [
    "embassy",
    "async",
    "embassy-time-systick",
    "flip-link",
    "log",
] }
esp-backtrace = { version = "0.10.0", features = [
    "esp32c6",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }
esp-println = { version = "0.8.0", features = ["esp32c6", "log"] }
log = { version = "0.4.20" }
embassy-executor = { version = "0.5.0", features = [
    "arch-riscv32",
    "log",
    "nightly",
    "executor-thread",
    "integrated-timers",
] }
embassy-sync = "0.5.0"
embassy-embedded-hal = "0.1.0"
embassy-time = "0.3.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
static_cell = "2.0.0"
embedded-hal = "1.0.0"
smart-leds = "0.3.0"
critical-section = "1.1.2"
